Fixed the bug that caused MATLAB to crash.

--- a/Presentation/Presentation.tex
+++ b/Presentation/Presentation.tex
@@ -99,15 +99,15 @@
 %----------------------------------------------------------------
 
 
-\title{Given a Helical Compression Spring in a Spring-Mass Damper System: \\ What are Optimal Springs?}
+\title[]{Given a Helical Compression Spring in a Spring-Mass Damper System: What are Optimal Springs?}
 %\subtitle{\small(Using local optimization methods to locate and find singularities.)}
-\author[J. Krueger, A. Bentley, J Jiang, S. Nnannapaneni, T. Qiu,\\T. Hodges] {J. Krueger, A. Bentley, J Jiang, S. Nnannapaneni, T. Qiu,\\T. Hodges}
+\author[A. Bentley, T. Hodges, J. Jiang, J. Krueger, S. Nnannapaneni, T. Qiu]{A. Bentley, T. Hodges, J. Jiang, J. Krueger, S. Nnannapaneni, T. Qiu}
 
 
-\institute[]{\normalsize Samsi IMSM Workshop} 
+\institute[]{\normalsize 2015 Industrial Math/Stat Modeling Workshop for Graduate Students} 
 
 
-\date{July 23, 2015}
+\date{July 22, 2015}
 
 
 
