--- a/Report/MyBib.bib
+++ b/Report/MyBib.bib
@@ -161,6 +161,11 @@
 
 }
 
+@misc{SpringDevice,
+  title = {A History of Springs},
+  howpublished = {\url{http://www.smihq.org/public/publications/springsmag08_07a.html}},
+  note = {Accessed: 2015-07-20}
+}
 
 
 
