Added descriptions of the properties and attributes.

--- a/Report/MyBib.bib
+++ b/Report/MyBib.bib
@@ -167,7 +167,11 @@
   note = {Accessed: 2015-07-20}
 }
 
-
+@misc{SpringIndex,
+  title = {Newcomb Spring Corp},
+  howpublished = {\url{http://www.newcombspring.com/article_spring_index.html}},
+  note = {Accessed: 2015-07-20}
+}
 
 
 
