--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -117,7 +117,7 @@ Helical springs are the typical spring that comes to most peoples mind, for illu
 		 
 		 \end{figure}
 
-The above spring has many design parameters. These range from physical parameters such as wire diameter, to purely empirical attributes, for example spring rate. The empirical attributes have to be assumed in a range of values. This is because for extreme values these attributes exhibit behavior that is not under consideration. Below is a list of a spring's key design parameters and empirical attributes. We have added a few illustrations to illustrate some of the parameters. \cite{Massad2015}		 
+The above spring has many design parameters. These range from physical parameters such as wire diameter, to purely empirical attributes, for example spring rate. The empirical attributes have to be assumed in a range of values. If they are not extreme values will exhibit behavior we do not wish to consider. Below is a list of a spring's key design parameters and empirical attributes. We have added a few illustrations to illustrate some of the parameters. \cite{Massad2015}		 
 		\begin{figure}[h]
 			\centering
 			\begin{subfigure}{.5\textwidth}
@@ -138,23 +138,32 @@ The above spring has many design parameters. These range from physical parameter
 		
 		\begin{enumerate}
 			\item Spring's inner diameter $d_{i}$, illustrated in figure \ref{Description2}.
+			
 			\item Spring's outer diameter $d_{o}$ illustrated in figure \ref{Description1}.
+			
 			\item Spring's wire diameter $d_{w}$.
-			\item Total number of spring coils $N_{t}$.
-			\item Active number of spring coils $N_{a}$, active coils are not touching any other coils, and is subject to the spring being closed or open. 
-			\item Pitch $p$ illustrated in figure \ref{Description1}.
-			\item Spring's free length $L_{free}$, the spring's length without any force applied. 
+			
+			\item Total number of spring coils $N_{t}$, this is the number to rotations of wire in the spring, we allow for partial rotations.
+			
+			\item Active number of spring coils $N_{a}$, active coils are not touching any other coils, and is subject to the spring being closed or open. Closed means that the end coils are welded, where as open means they are not. For this reason a spring must have at least 2 coils.
+
+			\item Spring's free length $L_{free}$, the spring's length without any force applied, this is the spring length before being installed in the acceleration switch.
 			
 			\item Spring's solid length $L_{solid}$, the spring's length when all coils are compressed together.
-			\item Spring's open length $L_{open}$, the spring's length at open position, open is beginning state.
-			\item Spring's open length $L_{close}$, spring length at close position, close is the ending state.
-			\item Spring's open length $L_{hard}$, the maximum a spring can compress for the application.
-			\item Spring's open force $F_{open}$, this is the force on the spring in open position.
+			\item Spring's open length $L_{open}$, the spring's length at open position, for the acceleration switch this would be before the rocket sled test is initiated. 
+			\item Spring's open length $L_{close}$, spring length at close position, this would be when enough force is applied for the acceleration switch to close and start collecting data.
+			\item Spring's open length $L_{hard}$, the maximum a spring can compress for the application, for the acceleration switch this is the most compressed the acceleration switch should be. 
+			\item Spring's open force $F_{open}$, this is the force on the spring in open position, the resting force for the acceleration switch.			
+			
+			\item Pitch $p$ illustrated in figure \ref{Description1}, depends on the wire diameter, the free length and the number of active coils.
 			
 			
-			\item Spring's shear modulus $G$, this is determined by the material of the spring.
-			\item Spring's youngs modulus $E$, this is determined by the material of the spring.
-			\item Spring's poisson ratio $\nu$, this is determined by the material of the spring.
+			\item Spring's shear modulus or modulus of rigidity, $G$, is one of several quantities for measuring the stiffness of materials.
+			
+			\item Spring's youngs modulus or tensile modulus or elastic modulus, $E$, is a measurement of force that is needed  to stretch (or compress) a sample of material.
+			
+			\item Spring's poisson ratio $\nu$, is a measurement of the poisson effect of a material. 
+			
 			\item Ultimate torsional stress, UTS. 
 		
 		\end{enumerate}
@@ -164,16 +173,26 @@ One can see that the above parameters are physical design parameters. Each of th
 			%\begin{enumerate}
 			%	\item 
 			Spring Rate:\begin{equation} k = \frac{G}{8N_{a}}\frac{d_{w}^{4}}{(d_{i} + d_{w})^{3}}\end{equation}
+			The spring rate is a quantity used to measure the rigidity or stiffness of the object. 
 				
 				 Spring Index:\begin{equation}C = \frac{d_{i}}{d_{w}} + 1.\end{equation}
+				 The spring index gives a measurement of the inner diameter to the wire diameter. This is useful because outside of certain values the design will require more tolerance and cost also increases. \cite{SpringIndex}
 				
 				Coil Binding Gap\begin{equation} g = \frac{L_{hard} - L_{solid}(d_{w},N_{a}; ec)}{N_{t} - 1}\end{equation}
+				If the spring is allowed to go to solid compression, it is possible the spring could continue compression and cause coils to bind. Think about your favorite slinky. 
+		
+
 		
 				 Max Shear Stress\begin{equation} \frac{G(L_{free} - L_{hard})}{4 \pi N_{a} (ec)} \left[\frac{d_{w} (4d_{i}^{2} + 9.46d_{i} 
 d_{w} + 3 d_{w}^{2})}{d_{i}(d_{i}+d_{w})^{3}}\right]< UTS\end{equation}
+
+				Shear stress is a measurement of stress coplanar to the spring. 
 		
 				Diametral Expansion\begin{equation} d_{expand} = d_{w} + \sqrt{(d_{i} + d_{w})^{2} + \frac{p^{2} - d_{w}}{\pi^{2}}}
 			\end{equation}
+			
+			This is the expansion of the diameter as compression of the spring is happening. One may notice that \begin{equation}p^{2} \ge d_{w} - \pi^{2} (d_{i} + d_{w})^{2},\end{equation} this is putting an implicit constraint on how much the spring can be extended/compressed.
+			
 			
 			
 			
@@ -184,20 +203,28 @@ d_{w} + 3 d_{w}^{2})}{d_{i}(d_{i}+d_{w})^{3}}\right]< UTS\end{equation}
 
 Design an algorithm that optimizes springs with interchangeable objectives and constraints. In addition, attempt to incorporate properties stress relaxation and creep into the available objectives and constraints. 
 
-A list of possible constraints/objectives given in minimization form is below
+A list of possible constraints/objectives given in minimization form is below, please note that \\$d_{i}^{max}, d_{o}^{max}, k_{max}, C_{max}$, and $g_{min}$ are user defined bounds. 
 
 \begin{enumerate}
-\item $d_{i} < d_{i}^{max}$
-\item $d_{i} < d_{o}$
-\item $d_{i} + 2d_{w} < d_{o}^{max}$
-\item$d_{expand} - d_{0}^{max} < 0 $
-\item$ \frac{G}{8N_{a}}\frac{d_{w}^{4}}{(d_{i} + d_{w})^{3}} - k_{max} \le 0 $
-\item $\frac{d_{i}}{d_{w}} + 1 - C_{max}< 0$
-\item $(L_{free} - L_{open})\frac{G}{8N_{a}}\frac{d_{w}^{4}}{(d_{i} + d_{w})^{3}} - F_{open} = 0 $
-\item $\frac{L_{hard} - L_{solid}}{N_{t} - 1} + g_{min} \le  0$
-\item$\frac{L_{free}}{d_{i} + d_{w}} - \pi \sqrt{\frac{2(2 \nu + 1)}{\nu + 2}}$
+\item $d_{i} < d_{i}^{max}$, this sets a design constraint on what we will allow the inner diamter to be. For the acceleration switch, we must have a spring that will fit the housing of the switch.
+\item $d_{i} < d_{o}$, physically we must have a bigger outer diameter than inner diameter.
+\item $d_{i} + 2d_{w} < d_{o}^{max}$, The outer diameter cannot exceed some design limitation.
+\item$d_{expand} - d_{0}^{max} < 0 $, we will not allow the spring to expand more than a certain amount during compression.
+\item$ \frac{G}{8N_{a}}\frac{d_{w}^{4}}{(d_{i} + d_{w})^{3}} - k_{max} \le 0 $, there is a maximum spring rate or stiffness that we will allow. 
+
+\item $\frac{d_{i}}{d_{w}} + 1 - C_{max}< 0$, similarly we will only allow a maximum ratio between the inner diameter and wire diameter. 
+
+\item $(L_{free} - L_{open})\frac{G}{8N_{a}}\frac{d_{w}^{4}}{(d_{i} + d_{w})^{3}} - F_{open} = 0 $, $F_{open}$ should be physically possible given its formulation.
+
+\item $\frac{L_{hard} - L_{solid}}{N_{t} - 1} + g_{min} \le  0$. There is a minimum gap we wish to have to ensure our coils cannot bind. 
+
+\item$\frac{L_{free}}{d_{i} + d_{w}} - \pi \sqrt{\frac{2(2 \nu + 1)}{\nu + 2}}$, if a spring is slender, it may buckle or fold on itself. This is a constraint to address this physical attribute. 
+
 \item$-UTS + \frac{G(L_{free} - L_{hard})}{4 \pi N_{a} (ec)} \left[\frac{d_{w} (4d_{i}^{2} + 9.46d_{i} 
 d_{w} + 3 d_{w}^{2})}{d_{i}(d_{i}+d_{w})^{3}}\right] < 0$
+
+We do not wish to allow the torsional stress to exceed a certain amount, $UTS$.
+
 \end{enumerate}	
 
 This list is not exhaustive as we want a user to be able to define new constraints and objectives. 
